# rnn-pann

./: .gitignore  CURSOR.md  README.md  main.py  pyproject.toml  requirements.txt
actual_machine_notebooks/: README.md  note1.ipynb
actual_machine_notebooks/note1/: note1.ipynb
actual_machine_notebooks/note2/: note2.ipynb  note2.ipynb.bak
actual_machine_notebooks/note3/: README.md  note.ipynb  note.py  note12_20.py  note_sim.ipynb  note_sim.py
actual_machine_notebooks/note4/: README.md  note.ipynb  note.py  note4-2.ipynb  note_sim.ipynb  plan.md  read_from_csv.ipynb
actual_machine_notebooks/note5/: note.ipynb
actual_machine_notebooks/utils/: create_csv_data.ipynb
data/: buck_converter_steady.csv  iL1_Sf_100k_TS1E-08.csv  prediction_results.csv  sin_curve.csv
data/buck_sim_Vin10.0_Vref5.0_fs100000.0_ppc1000_cyc1000/: buck_sim_Vin10.0_Vref5.0_fs100000.json
data/buck_sim_Vin10.0_Vref5.0_fs100000.0_ppc2000_cyc1000/: buck_sim_Vin10.0_Vref5.0_fs100000.json
data/buck_sim_Vin10.0_Vref5.0_fs100000.0_ppc200_cyc10/: buck_sim_Vin10.0_Vref5.0_fs100000.csv  buck_sim_Vin10.0_Vref5.0_fs100000.json
data/ltspice_sim/: Buck.asc  Buck.raw  (+2 more)
docs/: conda環境.md
notebooks/: README.md  generate_buck_data.ipynb  gru-note1.ipynb  note0-1.ipynb  note0-1.py  note1.ipynb  note10.ipynb  note11.ipynb  note12.ipynb  note13.ipynb  note14.ipynb  note15.ipynb  note16.ipynb  note17.ipynb  note17.md  note17.py  note2.ipynb  note3.ipynb  note4.ipynb  note5.ipynb  note7.ipynb  note8.ipynb  note9.ipynb  rnn-sample.ipynb  rnn-sample.py  sample2.ipynb
進捗報告資料/: README.md
(+67 files in other folders)
