[project]
name = "rnn-pann"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "ruff>=0.13.2",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "torchinfo>=1.8.0",
    "torchview>=0.2.7",
    "torchvision>=0.23.0",
    "torchviz>=0.0.3",
]


[project.scripts]
rnn-pann = "rnn_pann:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["E", "F", "ANN", "I", "UP", "B", "C", "T", "N"]
ignore = ["C901", "T201", "T203", "N803", "N806", "N816"]
